[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pause/Pause.gd" type="Script" id=1]
[ext_resource path="res://assets/Images/blackscreeen.jpg" type="Texture" id=2]
[ext_resource path="res://assets/Fonts/Amagro.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Black" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.584314 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -90.0
margin_right = 886.0
margin_bottom = 390.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -44.5
margin_right = 126.0
margin_bottom = 44.5
custom_fonts/font = SubResource( 1 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 387.782
margin_top = 354.0
margin_right = 638.782
margin_bottom = 446.0
custom_fonts/font = SubResource( 2 )
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 388.0
margin_top = 455.0
margin_right = 639.0
margin_bottom = 533.0
custom_fonts/font = SubResource( 3 )
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
